--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,20 @@ body{
     background-color: blueviolet;
 }
 
+
+body{
+    background-color: brown;
+}
+
+
+#message1:hover{
+    font-size: 30px;
+    opacity: 0.3;
+}
+
+nav ul li {
+    text-decloration: none;
+    list-style-type: none;
+    display: flex;
+    float: right;
+}
